--- a/WPFTodoList/App.xaml
+++ b/WPFTodoList/App.xaml
@@ -1,7 +1,8 @@
 ﻿<prism:PrismApplication x:Class="WPFTodoList.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:prism="http://prismlibrary.com/">
+             xmlns:prism="http://prismlibrary.com/"
+             xmlns:fa="http://schemas.fontawesome.io/icons/">
     <Application.Resources>
         <SolidColorBrush x:Key="White" Color="#ffffff"></SolidColorBrush>
         
@@ -17,26 +18,35 @@
 
         <SolidColorBrush x:Key="OrangeLighten3" Color="#ffcc80"></SolidColorBrush>
 
+        <DataTemplate x:Key="NavigationListViewDataTemplate">
+            <DockPanel LastChildFill="True">
+                <fa:ImageAwesome DockPanel.Dock="Left"
+                                 Icon="{ Binding Path=Icon }"
+                                 Width="20"
+                                 Height="20"
+                                 Foreground="{ StaticResource LightBlueLighten5 }" />
+                <Label DockPanel.Dock="Left" 
+                       Foreground="{ StaticResource LightBlueLighten5 }"
+                       Content="{ Binding Path=DisplayName }" />
+            </DockPanel>
+        </DataTemplate>
+
         <Style TargetType="{ x:Type ListViewItem }" x:Key="NavigationListViewItemContainerStyle">
             <Style.Setters>
-                <Setter Property="HorizontalContentAlignment"
-                                Value="Stretch" />
-                <Setter Property="Padding" 
-                                Value="4" />
-                <Setter Property="Margin"
-                                Value="0" />
-                <Setter Property="Cursor"
-                                Value="Hand" />
+                <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                <Setter Property="Padding" Value="4" />
+                <Setter Property="Margin" Value="0" />
+                <Setter Property="Cursor" Value="Hand" />
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{ x:Type ListViewItem }">
                             <Border x:Name="ListViewItemBorder"
-                                Background="{ TemplateBinding Background }"
-                                Padding="{ TemplateBinding Padding }"
-                                Margin="{ TemplateBinding Margin }"
-                                Height="{ TemplateBinding Height }"
-                                SnapsToDevicePixels="True"
-                                CornerRadius="2, 0, 0, 2">
+                                    Background="{ TemplateBinding Background }"
+                                    Padding="{ TemplateBinding Padding }"
+                                    Margin="{ TemplateBinding Margin }"
+                                    Height="{ TemplateBinding Height }"
+                                    SnapsToDevicePixels="True"
+                                    CornerRadius="2, 0, 0, 2">
                                 <ContentPresenter />
                             </Border>
 
